--- a/frontend/src/presentation/components/ModalActivity.css
+++ b/frontend/src/presentation/components/ModalActivity.css
@@ -1,17 +1,62 @@
 .modal{
     width: 50%;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
+    position: absolute;
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    z-index: 9999;
     margin: auto;
     display: flex;
     justify-content: space-between;
     border-radius: 60px;
+    background-color: white;
+    -webkit-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.28);
+    -moz-box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.28);
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.28);
 }
 
 .modal_ActivityInfo{
-    margin:80px;
-    width: 50%;
+    flex:1;
+    margin:50px;
+}
+
+.modal_ActivityInfo_name{
+    margin-bottom:10px;
+}
+
+.modal_ActivityInfo_description{
+    margin-bottom:18px;
+}
+
+.modal_ActivityInfo_content{
+    font-weight: 700;
+    margin-bottom:18px;
 }
 
 .modal_ActivityImg{
+    overflow: hidden;
+    flex:1;
+    border-radius: 0 60px 60px 0;
+    height: 420px;
+}
 
+.modal_ActivityImg img {
+    width:100%;
+}
+
+.modal_CloseButton{
+    background-color: var(--main-color);
+    color: white;
+    font-size:24px;
+    font-weight: 600;
+    padding:10px;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    border: none;
+    position: absolute;
+    top:15px;
+    right: 20px;
+    cursor: pointer;
 }
