--- a/frontend/src/presentation/pages/Header.css
+++ b/frontend/src/presentation/pages/Header.css
@@ -1,22 +1,26 @@
 .header {
-    background-color: white;
-    height: 20vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .title {
-    font-size: 50px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: var(--main-color);
-  }
-  
-  .tagline {
-    font-size: 25px;
-    color: black;
-    font-weight: 300;
-  }
-  
+  background-color: white;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+.titleRuralFit {
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: var(--main-color);
+}
+
+.sloganBlack {
+  font-size: 18px;
+  color: black;
+  font-weight: 400;
+  font-family: var(--main-font-family);
+}
