--- a/frontend/src/presentation/components/ActivitiesCalendar/ActivitiesCalendar.css
+++ b/frontend/src/presentation/components/ActivitiesCalendar/ActivitiesCalendar.css
@@ -1,5 +1,6 @@
 .calendarContainer {
-    margin: 20px 100px;
+    margin: 0 auto;
+    width: 70%;
 }
 
 .fc-v-event {
@@ -22,8 +23,8 @@
     color: #000000;
     text-align: center;
     font-family: var(--main-font-family);
-    font-size: 22px;
-    margin: 40px 0px;
+    font-size: 20px;
+    margin: 10px 0px;
 }
 
 .fc-timegrid-axis-cushion {
