--- a/frontend/src/presentation/components/ModalActivity.css
+++ b/frontend/src/presentation/components/ModalActivity.css
@@ -1,5 +1,6 @@
 .modal{
     width: 50%;
+    height: 60%;
     /* outline: 1px solid red; */
     position: absolute;
     top: 50%;
@@ -21,12 +22,18 @@
     margin:50px;
 }
 
+.modal_ActivityInfo_title {
+    font-family: var(--main-font-family);
+}
+
 .modal_ActivityInfo_name{
     margin-bottom:10px;
 }
 
 .modal_ActivityInfo_description{
     margin-bottom:18px;
+    font-family: var(--main-font-family);
+    font-size: 16px;
 }
 
 .modal_ActivityInfo_content{
@@ -37,26 +44,24 @@
 .modal_ActivityImg{
     overflow: hidden;
     flex:1;
-    border-radius: 0 60px 60px 0;
-    height: 420px;
+    height: 100%;
+
 }
 
 .modal_ActivityImg img {
-    width:100%;
+    object-fit: contain;
+    max-width: 480px;
 }
 
-.modal_CloseButton{
-    background-color: var(--main-color);
-    color: white;
-    font-size:24px;
-    font-weight: 600;
-    padding:10px;
-    width: 46px;
-    height: 46px;
-    border-radius: 50%;
-    border: none;
+.modal_CloseButton {
     position: absolute;
     top:15px;
     right: 20px;
-    cursor: pointer;
+    z-index: 10;
+    background: none;
+    border: none;
+}
+
+ul {
+    padding: 0;
 }
