--- a/frontend/src/presentation/components/ModalActivity.css
+++ b/frontend/src/presentation/components/ModalActivity.css
@@ -45,7 +45,6 @@
     overflow: hidden;
     flex:1;
     height: 100%;
-
 }
 
 .modal_ActivityImg img {
@@ -64,4 +63,25 @@
 
 ul {
     padding: 0;
+}
+
+@media only screen and (max-width: 800px) {
+    .modal{
+        width: 100%;
+        height: 100%;
+        border-radius: 0px;
+        display: flex;
+        flex-direction: column;
+    }
+    .modal_ActivityInfo_name {
+        font-size: 20px;
+    }
+    .modal_ActivityInfo_description {
+        font-size: 16px;
+    }
+    .modal_ActivityInfo {
+        flex: 0;
+    }
+
+
 }
