--- a/frontend/src/presentation/pages/Home.css
+++ b/frontend/src/presentation/pages/Home.css
@@ -1,73 +1,114 @@
 .containerHome {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    outline: 1px solid red;
-  }
-  
-  .backgroundImageContainer {
-    width: 100%;
-    height: 70%;
-    position: relative;
-    overflow: hidden;
-    background-image: url('../assets/Group 16.png');
-    background-repeat: no-repeat;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  outline: 1px solid red;
 }
-  
+
+.backgroundImageContainer {
+  width: 100%;
+  height: 70%;
+  position: relative;
+  overflow: hidden;
+  background-image: url("../assets/Group 16.png");
+  background-repeat: no-repeat;
+}
+
+.logoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 25vh;
+  opacity: 0;
+  animation: letra-aparece 1s ease-in-out forwards;
+}
+
+@keyframes letra-aparece {
+  from {
+    opacity: 0;
+    transform: translateX(-20%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.logo {
+  width: 200px;
+}
+
+.slogan {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: 300;
+  color: white;
+  font-family: var(--main-font-family);
+  letter-spacing: 10%;
+}
+
+.bottomContent {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.question {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  font-family: var(--main-font-family);
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  margin: 0 10px;
+  padding: 10px 20px;
+  width: 250px;
+  font-size: 14px;
+  font-family: var(--main-font-family);
+  font-weight: bold;
+  background-color: var(--main-color);
+  color: white;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  transition: transform 0.5s;
+}
+
+.button:hover {
+  transform: scale(1.1);
+}
+
+@media only screen and (max-width: 600px) {
+  .backgroundImageContainer {
+    height: 65%;
+  }
   .logoContainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    margin-top: 20vh;
   }
-  
-  .logo {
-    width: 200px; 
-    }
-  
   .slogan {
-    margin-top: 10px;
-    font-size: 18px;
-    font-weight: 300;
-    color: white;
-    font-family: var(--main-font-family);
-    letter-spacing: 10%;
+    font-size: 16px;
+    letter-spacing: 5%;
   }
-  
-  .bottomContent {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 80px;
-  }
-  
   .question {
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 30px;
-    font-family: var(--main-font-family);
+    font-size: 20px;
   }
-  
   .buttonContainer {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
   }
-  
-  .button {
-    margin: 0 10px;
-    padding: 10px 20px;
-    font-size: 14px;
-    font-family: var(--main-font-family);
-    font-weight: bold;
-    background-color: var(--main-color);
-    color: white;
-    border: none;
-    border-radius: 40px;
-    cursor: pointer;
-  }
-  
+}
